styled my website

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      </nav>
 </header>
 <section class = "print">
-    <h1>Elevaing Every Print With<br> Precision And Passion.</h1>
+    <h1>Elevating Every Print With<br> Precision And Passion.</h1>
     <p>Rasi Scree Print where tradition meets innovation, delivering <br>
     exquisite design with every stroke.</p>
     <button id="contact-us">Contact Us</button>
@@ -95,13 +95,16 @@ Eco-Friendly Practices
 
     <div class="traditional-textile">
     <img src="images/tradiitional.jpeg" alt="" id="traditional-printing">
-    <h2>Traditional Textile Screen Printing</h2>
+    <h2>Traditional Textile<br> <i class="fa-solid fa-arrow-right"></i>
+        <br>
+        Screen  Printing</h2>
     <p>This methhod is extrensively employed in the fashion<br> and apparel industry for printing designs onto<br> garments,fabrics and accessories.</p>
     </div>
 
     <div class="digital-textile">
     <img src="images/advanced.jpg" alt="" id="advanced-printing-sreen">
-    <h2>Advanced UV Screen Printing</h2>
+    <h2>Advanced UV<br> <i class="fa-solid fa-arrow-right"></i><br>
+         Screen Printing</h2>
     <p>UV screen printing has gained popularrity due to its<br>
     ability to cure instantly when exposed to ultraviolet<br>
     light, resulting in fast production.</p>
@@ -109,7 +112,8 @@ Eco-Friendly Practices
 
     <div>
     <img src="images/4-colors.jpeg" alt="" id="four-color">
-    <h2>Four-Color Process Printing</h2>
+    <h2>Four-Color<br> <i class="fa-solid fa-arrow-right"></i>
+         Process Printing</h2>
     <p>Also known as CMYK printing this method is widely<br>
     used for reprosucing dull colour images with a broad<br> range of tones and gradients. </p>
 
@@ -128,16 +132,16 @@ Eco-Friendly Practices
     </div>
 
     <div class="industries">
-        <img src="images/birla.jpeg" alt="" id="industies-image">
-        <h2>Aditya Birla</h2>
-        <p>Garmet Industry</p>
+        <img src="images/birla.jpeg" alt="" id="industries-image">
+        <!-- <h2>Aditya Birla</h2>
+        <p id="industries-p">Garmet Industry</p> -->
 
-        <img src="images/alvid.png" alt="" id="industies-image">
-        <h2>Arvind Pvt.ltd</h2>
+        <img src="images/alvid.png" alt="" id="industries-image">
+        <!-- <h2>Arvind Pvt.ltd</h2> -->
 
-        <img src="images/raymond.png" alt="" id="industies-image">
-        <p>Raymond Mills</p>
-        <p>Garment Industry</p>
+        <img src="images/raymond.png" alt="" id="industries-image">
+        <!-- <h2>Raymond Mills</h2>
+        <p id="industries-p">Garment Industry</p> -->
 
     </div>
 </section>
@@ -147,8 +151,12 @@ Eco-Friendly Practices
 <section class="high-quality-printing">
 
     <div class="high-quality-text">
- <h1>High Quality Printing and On-=Time!!</h1>
- <!-- stars -->
+ <h1>High Quality Printing and On Time!!</h1>
+ <i class="fa-solid fa-star"></i>
+ <i class="fa-solid fa-star"></i>
+ <i class="fa-solid fa-star"></i>
+ <i class="fa-solid fa-star"></i>
+ <i class="fa-solid fa-star"></i>
   <p>We are incredibly impressed with the exceptional services and quality provided by <br>
     Rasi Screen Printing.Their attention to details, commitment to delivery on time,<br>
 and the level  of proffesionalism displayed throughout our collaboration have been<br>
@@ -175,7 +183,6 @@ highest standard</p>
     <img src="images/puma.png" alt="" id="logo-puma">
     <img src="images/birla.jpeg" alt="" id="logo-birla">
     <img src="images/converse.png" alt="" id="logo-converse">
-    <img src="images/malkar.png" alt="" id="logo-malkarlar">
 
     </section>
 
@@ -192,7 +199,7 @@ creations imbued with precision,innovation,and enduring sophistication.</p>
     <img src="images/clothes.jpeg" alt="Showcasting Work " id="fashonist">
     <img src="images/bed.avif" alt="Showcasting Work " id="fashonist">
     <img src="images/fashonist.jpeg" alt="Showcasting Work " id="fashonist" >
-        <img src="images/cloth.jpeg" alt="showcasting-work-images" id="showcasting-work-images">
+        <img src="images/phothcloth.jpeg" alt="showcasting-work-images" id="showcasting-work-images">
 </div>
 
 </section>
