--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ creations imbued with precision,innovation,and enduring sophistication.</p>
 
 <div class="showcasting-work-images">
     <img src="images/clothes.jpeg" alt="Showcasting Work " id="fashonist">
-    <img src="images/bed.avif" alt="Showcasting Work " id="fashonist">
+    <img src="images/bed.avif" alt="Showcasting Work " id="fashonists">
     <img src="images/fashonist.jpeg" alt="Showcasting Work " id="fashonist" >
         <img src="images/phothcloth.jpeg" alt="showcasting-work-images" id="showcasting-work-image">
 </div>
